add openapi validation
